# GXSTNU-Schoolnet-Login-Assistant

./: .gitignore  GUI界面优化与功能扩展指南.md  LICENSE  README.md  auth.py  config_secret_example.py  dislogin.py  get_url.py  gui.py  logger.py  login.py  main.py  network_manager.py  pyproject.toml  requirements.txt  run.py
.trae/rules/: project_rules.md
app/core/: network.py  task_scheduler.py  test_network.py
app/gui/: main_gui_program.py  main_ui.py  window_rc.py
app/utils/: logger.py  updater.py
assets/qtfile/: PswdInput.ui  main.ui  main_window.ui  main_window_mini.ui  window.qrc
config/: credentials.py  init_key.py  test_credentials.py
scripts/: autologin.py  build.py
src/core/: AsyncTaskExecutor.py  AutoLoginScript.py  Credentials.py  NetworkManager.py  TaskScheduler.py  network.py
src/gui/: PswdInput_ui.py  main_gui_program.py  main_ui.py  window_rc.py
src/tool/: README_PYSIDE_TOOLS.md  build_auto_login.ps1  build_auto_login.py  build_main_ui.ps1  build_main_ui.py  run_designer.ps1  run_rcc.ps1  run_ui_rcc_converter.py  run_uic.ps1  schtasks_params_guide.md
src/utils/: logger.py  task_manager.py
